Long overdue commit
[Common]
- 'MONITOR' debug level (value=17), between DEBUG and INFO
- isclose and ismultiple no longer fail on Theano inputs, but output warning

[Analyze]
- Allow plotting of plain NumPy arrays
- Fix name extraction for plot labels
- More easily expandable color schemes

[Histories]
- Add raw output for Spiketrain
- Multiple fixes to Spiketrain - class has now been used in user code
- [HACK] Add operator methods to Spiketrain: `pop_add`, `pop_mul`, etc.
  Should eventually be written as magic methods `__add__`, etc.
- Improvement to raw imports for histories whose _data attribute is not
  a shared variable
- Fixes to `pad_time`
- Add `clear_inputs` method
- `get_trace()` now more compact and works with components specified in an array

[Kernels]
- Kernels now always return zero outside their specified range.
  This is more consistent, as before the value of 0 had to be imposed by the
  evaluation function.
- Some changes to ExpKernel.eval

[Models]
- Generic loglikelihood function for binomial variables.
  To be used when defining models.

[Optimize]
- Multiple small changes to sgd module

[Misc]
- Update todos

--- a/sinn/todo.org
+++ b/sinn/todo.org
@@ -4,3 +4,20 @@
   Would take graph, parameter, new name, "to" and "from" conversion functions (e.g. 10** and log)
   Would then take care of cloning the graph, replacing with the "to" converted new parameter
   and setting the value of the shared parameter with the "from" conversion
+* TODO Uniform kernel
+* TODO Allow combinations of kernels (e.g. uniform + exp)
+* TODO Allow setting portions of a history
+* TODO Lag method for histories
+  Return the value of a history at some lag
+  - Allows using index for time and float for lag, or vice-versa
+  - Allows using a different lag for each component
+  - Don't require evaluation beyond the latest lag
+  - Idea: implement a HistoryView, which allows indexing of histories
+    at lagged times. So call could be `A.lag(3)[t]`
+* TODO Memory-less Series (i.e. variable)
+  - Include 'get_value' method for easy sequential updating
+  - Only update once per t
+  - Only update to next t
+  - Cannot update to past t
+* TODO Attach list of inputs to history
+* TODO Don't allow negative integer indices for histories
