--- a/sinn/todo.org
+++ b/sinn/todo.org
@@ -7,6 +7,11 @@
 * TODO Uniform kernel
 * TODO Allow combinations of kernels (e.g. uniform + exp)
 * TODO Allow setting portions of a history
+* TODO Memory-less Series (i.e. variable)
+  - Include 'get_value' method for easy sequential updating
+  - Only update once per t
+  - Only update to next t
+  - Cannot update to past t
 * TODO Lag method for histories
   Return the value of a history at some lag
   - Allows using index for time and float for lag, or vice-versa
@@ -14,12 +19,10 @@
   - Don't require evaluation beyond the latest lag
   - Idea: implement a HistoryView, which allows indexing of histories
     at lagged times. So call could be `A.lag(3)[t]`
-* TODO Memory-less Series (i.e. variable)
-  - Include 'get_value' method for easy sequential updating
-  - Only update once per t
-  - Only update to next t
-  - Cannot update to past t
 * TODO Attach list of inputs to history
+* TODO Allow input dependencies to specify a lag
+  Should be possible to give to m the dependency m_lag1, while
+  keeping m 'batch computable'.
 * TODO Don't allow negative integer indices for histories
 * TODO [Spiketrain] Attach connectivity matrix to kernel, not spiketrain
 ** Will need to figure out how to expand the connectivity matrix
@@ -28,3 +31,4 @@
 * TODO [History] Detect when name is reused, and add suffix.
 * FIXME [History] Compound operations don't work. E.g. : (A-a) * (B-b), with A,B histories.
 * FIXME [Analyze.plot] History names/labels with multiple underscores break if we try to plot legend
+* TODO Multiple 'monitor' levels for logging
