--- a/sinn/todo.org
+++ b/sinn/todo.org
@@ -1,34 +1,40 @@
-* TODO Deprecate `use_theano` attribute and parameter in History
-  _data should always be a shared variable
-* TODO Parameter replace function for models
-  Would take graph, parameter, new name, "to" and "from" conversion functions (e.g. 10** and log)
-  Would then take care of cloning the graph, replacing with the "to" converted new parameter
-  and setting the value of the shared parameter with the "from" conversion
-* TODO Uniform kernel
-* TODO Allow combinations of kernels (e.g. uniform + exp)
-* TODO Allow setting portions of a history
-* TODO Memory-less Series (i.e. variable)
-  - Include 'get_value' method for easy sequential updating
-  - Only update once per t
-  - Only update to next t
-  - Cannot update to past t
-* TODO Lag method for histories
-  Return the value of a history at some lag
-  - Allows using index for time and float for lag, or vice-versa
-  - Allows using a different lag for each component
-  - Don't require evaluation beyond the latest lag
-  - Idea: implement a HistoryView, which allows indexing of histories
-    at lagged times. So call could be `A.lag(3)[t]`
-* TODO Attach list of inputs to history
-* TODO Allow input dependencies to specify a lag
-  Should be possible to give to m the dependency m_lag1, while
-  keeping m 'batch computable'.
-* TODO Don't allow negative integer indices for histories
-* TODO [Spiketrain] Attach connectivity matrix to kernel, not spiketrain
-** Will need to figure out how to expand the connectivity matrix
-   Possibly something like the 'discretize' pattern, where it is attached to the kernel ?
-* TODO [History] Allow to specify no. of bins in __init__, instead of t0 & tn
-* TODO [History] Detect when name is reused, and add suffix.
-* FIXME [History] Compound operations don't work. E.g. : (A-a) * (B-b), with A,B histories.
-* FIXME [Analyze.plot] History names/labels with multiple underscores break if we try to plot legend
-* TODO Multiple 'monitor' levels for logging
+* Priority 1
+** TODO Memory-less Series (i.e. variable)
+   - Include 'get_value' method for easy sequential updating
+   - Only update once per t
+   - Only update to next t
+   - Cannot update to past t
+** TODO Allow setting portions of a history
+** TODO Lag method for histories
+   Return the value of a history at some lag
+   - Allows using index for time and float for lag, or vice-versa
+   - Allows using a different lag for each component
+   - Don't require evaluation beyond the latest lag
+   - Idea: implement a HistoryView, which allows indexing of histories
+     at lagged times. So call could be `A.lag(3)[t]`
+** TODO [History] Detect when name is reused, and add suffix.
+** FIXME [History] Compound operations don't work. E.g. : (A-a) * (B-b), with A,B histories.
+** FIXME [Analyze.plot] History names/labels with multiple underscores break if we try to plot legend
+
+* Priority 2
+** TODO Parameter replace function for models
+   Would take graph, parameter, new name, "to" and "from" conversion functions (e.g. 10** and log)
+   Would then take care of cloning the graph, replacing with the "to" converted new parameter
+   and setting the value of the shared parameter with the "from" conversion
+*** TODO Deprecate `use_theano` attribute and parameter in History
+    _data should always be a shared variable
+*** TODO Allow combinations of kernels (e.g. uniform + exp)
+** TODO Attach list of inputs to history
+** TODO Allow input dependencies to specify a lag
+   Should be possible to give to m the dependency m_lag1, while
+   keeping m 'batch computable'.
+** TODO Uniform kernel
+** TODO Don't allow negative integer indices for histories
+** TODO [Spiketrain] Attach connectivity matrix to kernel, not spiketrain
+*** Will need to figure out how to expand the connectivity matrix
+    Possibly something like the 'discretize' pattern, where it is attached to the kernel ?
+** TODO [History] Allow to specify no. of bins in __init__, instead of t0 & tn
+** TODO Multiple 'monitor' levels for logging
+** TODO [History] Allow argument to 'pad' to be another history
+   Padding would then be adjusted to include at least as much padding
+
