Allow Theano histories to be single operation on tarr
Add the 'all' option to `compute_up_to`. This removes any dependence (and
therefore if else conditionals) on the current time index. If the history is
batch computable, it's _data member becomes a single operation applied to the
time array, and does not get added to the list of updates. This makes it
possible to define discretized kernels, working around the current limitation
that Theano graphs only update 1 step at a time.

--- a/sinn/todo.org
+++ b/sinn/todo.org
@@ -25,6 +25,7 @@
     _data should always be a shared variable
 *** TODO Allow combinations of kernels (e.g. uniform + exp)
 ** TODO Attach list of inputs to history
+** TODO Allow resizing a History (esp. reducing)
 ** TODO Allow input dependencies to specify a lag
    Should be possible to give to m the dependency m_lag1, while
    keeping m 'batch computable'.
