Update SCS example

--- a/examples/Random-RNN/scs_match.ipynb
+++ b/examples/Random-RNN/scs_match.ipynb
@@ -65,17 +65,17 @@
     "\n",
     "import mackelab_toolbox as mtb\n",
     "import mackelab_toolbox.typing\n",
+    "import mackelab_toolbox.cgshim\n",
     "from mackelab_toolbox.optimizers import Adam\n",
     "from tqdm import tqdm\n",
     "\n",
     "shim.load('theano')\n",
     "\n",
+    "mtb.typing.freeze_types()\n",
+    "\n",
     "from sinn.histories import TimeAxis\n",
-    "from sinn.optimize import SeriesSGD\n",
     "\n",
-    "from bptt_sinn import SCS\n",
-    "\n",
-    "mtb.typing.freeze_types()"
+    "from bptt_sinn import SCS"
    ]
   },
   {
@@ -228,13 +228,8 @@
       "Model 'SCS' (t0: 0.0, tn: 40.0, dt: 0.015625)\n",
       "---------------------------------------------\n",
       "State variables: h\n",
-      "N=10 J=J g=g\n",
+      "Parameters: N=10 J=J g=g\n",
       "\n",
-      "Update function for h:\n",
-      "    def upd_h(self, tidx):\n",
-      "        dt = self.time.dt\n",
-      "        h = self.h; J = self.J; φ = self.φ\n",
-      "        return (1-dt)*h[tidx-1] + dt * shim.dot(J, φ(h[tidx-1]) )\n",
       "\n"
      ]
     }
@@ -257,12 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "scs_target.advance(scs_target.tnidx)\n",
-    "scs.advance(scs.tnidx)"
+    "scs.integrate(scs.tnidx)"
    ]
   },
   {
