Random-RNN example: Removed some leftover references to 'bptt_sinn'

--- a/examples/Random-RNN/scs_match.ipynb
+++ b/examples/Random-RNN/scs_match.ipynb
@@ -75,7 +75,18 @@
     "\n",
     "from sinn.histories import TimeAxis\n",
     "\n",
-    "from bptt_sinn import SCS"
+    "from scs import SCS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> *Remark*: The line\n",
+    "> ```python\n",
+    "> from scs import SCS\n",
+    "> ```\n",
+    "> requires that the module *scs.py* be in the current directory."
    ]
   },
   {
@@ -673,9 +684,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (bptt_sinn)",
+   "display_name": "Python (sinn_scs)",
    "language": "python",
-   "name": "bptt_sinn"
+   "name": "sinn_scs"
   },
   "language_info": {
    "codemirror_mode": {
@@ -687,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
